--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
 </head>
 
 <body>
-  <div style="background-image: url('img/map.jpg')" class="main">
+  <div style="background-image: url('img/map.JPG')" class="main">
     <div class="overlay"></div>
     <div class="container">
       <p class="social">
-        <a href="#" title="" class="twitter"><i class="fa fa-twitter"></i></a>
+        <a href="https://twitter.com/trendXme" title="" class="twitter"><i class="fa fa-twitter"></i></a>
+		
       </p>
       <h1 class="cursive">trendX</h1>
       <h2 class="sub">visualizing trends you can't see on paper</h2>
